--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -109,3 +109,6 @@ add_executable(visual ${VISUAL_SOURCES})
 target_include_directories(visual PUBLIC visual external)
 target_include_directories(visual SYSTEM PRIVATE ${allegro_includes})
 target_link_libraries(visual PUBLIC flecs::flecs_static noises spdlog allegro allegro_primitives allegro_font imgui ImGuiFileDialog)
+if (WIN32)
+  target_compile_definitions(visual PRIVATE _SILENCE_ALL_MS_EXT_DEPRECATION_WARNINGS)
+endif()
