--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -103,12 +103,14 @@ endif()
 file(GLOB_RECURSE NOISES_SOURCES . noises/*.[ch]pp)
 add_library(noises STATIC ${NOISES_SOURCES})
 target_include_directories(noises PUBLIC noises)
+target_link_libraries(noises PRIVATE project_options project_warnings)
 
 file(GLOB_RECURSE VISUAL_SOURCES . visual/*.[ch]pp)
 add_executable(visual ${VISUAL_SOURCES})
 target_include_directories(visual PUBLIC visual external)
 target_include_directories(visual SYSTEM PRIVATE ${allegro_includes})
 target_link_libraries(visual PUBLIC flecs::flecs_static noises spdlog allegro allegro_primitives allegro_font imgui ImGuiFileDialog)
+target_link_libraries(visual PRIVATE project_options project_warnings)
 if (WIN32)
   target_compile_definitions(visual PRIVATE _SILENCE_ALL_MS_EXT_DEPRECATION_WARNINGS)
 endif()
